--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native-app-intro-slider": "^0.2.4",
     "react-native-global-font": "^1.0.1",
     "react-native-splash-screen": "^3.0.9",
-    "react-native-vector-icons": "^4.6.0"
+    "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^2.3.1"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
